--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,14 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".Screen.ConvidadosAdd"
-            android:label="@string/title_activity_convidados_add" >
+            android:label="@string/title_activity_convidados_add"
+            android:noHistory="true"
+            android:launchMode="singleInstance">
         </activity>
         <activity
             android:name=".Screen.ListConvActivity"
-            android:icon="@drawable/noivos2" >
+            android:icon="@drawable/noivos2"
+           >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,17 +31,11 @@
         </activity>
         <activity
             android:name=".Screen.AddDebito"
-            android:label="@string/title_activity_add_debito" >
-        </activity>
-        <activity
-            android:name=".Fragment.FoursquareVenueList"
-            android:label="@string/title_activity_foursquare_venue_list" >
+            android:label="@string/title_activity_add_debito"
+            android:noHistory="true"
+            android:launchMode="singleInstance">
         </activity>
 
-        <activity
-            android:name=".Class.SelecionaFornecedor"
-            android:label="@string/title_activity_seleciona_fornecedor" >
-        </activity>
     </application>
 
 </manifest>
